fixed map_icon not responsive

--- a/src/styles/components/_route.scss
+++ b/src/styles/components/_route.scss
@@ -31,6 +31,11 @@
 }
 
 .route__image--align {
-    align-items: flex-end;
+    align-items: flex-start;
 }
 
+.route__image--alignself {
+    // align-self: flex-end;
+    position:relative;
+    left: 90%
+}
